Use mouse cursor as listener position, remove marker

--- a/soundmap-player/index.html
+++ b/soundmap-player/index.html
@@ -24,18 +24,17 @@
       
       <div id="status" class="status-hidden">
         <div class="status-item">
-          <span class="label">Nearest Source:</span>
-          <span id="current-zone">None</span>
-        </div>
-        <div class="status-item">
-          <span class="label">Active Sources:</span>
-          <span id="active-tracks">0</span>
+          <span class="label">Distance:</span>
+          <span id="current-zone">Move mouse over map</span>
         </div>
       </div>
       
       <div class="control-group">
         <p style="font-size: 13px; color: #999; line-height: 1.5;">
-          Click or drag the pulsing marker to move around the map. Audio volume and filtering adjust based on distance from source points.
+          <strong>Instructions:</strong><br>
+          1. Click "Start Audio"<br>
+          2. Move your mouse cursor over the map<br>
+          3. Audio volume and filtering adjust based on distance from red source point
         </p>
       </div>
     </div>
