--- a/soundmap-player/index.html
+++ b/soundmap-player/index.html
@@ -31,7 +31,7 @@
       
       <div class="control-group">
         <label>Fade Speed</label>
-        <input type="range" id="fade-speed" min="0.1" max="2" value="0.5" step="0.1">
+        <input type="range" id="fade-speed" min="0.05" max="1" value="0.3" step="0.05" step="0.1">
         <span id="fade-speed-value">0.5s</span>
       </div>
       
