Implement ultra-smooth crossfading with continuous animation loop
- Added requestAnimationFrame loop for 60fps smooth gain interpolation
- Separated target volume calculation from actual gain updates
- Implemented exponential interpolation for buttery smooth transitions
- Added smoothness factor derived from fade speed slider
- Fixed fade speed slider display value mismatch

--- a/soundmap-player/index.html
+++ b/soundmap-player/index.html
@@ -31,8 +31,8 @@
       
       <div class="control-group">
         <label>Fade Speed</label>
-        <input type="range" id="fade-speed" min="0.05" max="1" value="0.3" step="0.05" step="0.1">
-        <span id="fade-speed-value">0.5s</span>
+        <input type="range" id="fade-speed" min="0.05" max="1" value="0.3" step="0.05">
+        <span id="fade-speed-value">0.3s</span>
       </div>
       
       <div class="control-group">
@@ -76,22 +76,22 @@
         <h3>Instructions</h3>
         <p style="font-size: 12px; color: #999; line-height: 1.6;">
           <strong>Edit Mode:</strong><br>
-          • Upload audio file and enter name<br>
-          • Click "Add to Map"<br>
-          • Click map to place source<br>
-          • Drag sources to reposition<br>
-          • Right-click to delete<br>
+          ï¿½ Upload audio file and enter name<br>
+          ï¿½ Click "Add to Map"<br>
+          ï¿½ Click map to place source<br>
+          ï¿½ Drag sources to reposition<br>
+          ï¿½ Right-click to delete<br>
           <br>
           <strong>Preview Mode:</strong><br>
-          • Move mouse to hear spatial audio<br>
-          • HRTF binaural positioning<br>
-          • Distance-based fading<br>
-          • Reverb send/return system<br>
+          ï¿½ Move mouse to hear spatial audio<br>
+          ï¿½ HRTF binaural positioning<br>
+          ï¿½ Distance-based fading<br>
+          ï¿½ Reverb send/return system<br>
           <br>
           <strong>Export:</strong><br>
-          • Saves config as JSON<br>
-          • Upload audio files to R2 manually<br>
-          • Config references R2 URLs
+          ï¿½ Saves config as JSON<br>
+          ï¿½ Upload audio files to R2 manually<br>
+          ï¿½ Config references R2 URLs
         </p>
       </div>
     </div>
