Clean up and fix drawing/audio assignment workflow
- Remove redundant code (shapes array, finish button logic)
- Fix drawing workflow: auto-finish on mouse up for rectangle/circle/path
- Fix polygon: double-click to finish
- Fix audio assignment to work with currentShape
- Improve edit/preview mode switching
- Streamline workflow: draw â†’ assign audio â†’ becomes zone

--- a/soundmap-player/index.html
+++ b/soundmap-player/index.html
@@ -75,10 +75,8 @@
       </div>
       
       <div id="sources-list" class="control-group">
-        <h3>Audio Sources (<span id="source-count">0</span>)</h3>
+        <h3>Audio Zones (<span id="source-count">0</span>)</h3>
         <div id="source-items"></div>
-        <h3 style="margin-top: 20px;">Audio Paths (<span id="path-count">0</span>)</h3>
-        <div id="path-items"></div>
       </div>
       
       <div id="status" class="control-group status-hidden">
