--- a/soundmap-player/index.html
+++ b/soundmap-player/index.html
@@ -55,6 +55,12 @@
         <h3 id="audio-form-title">Assign Audio to Shape</h3>
         <input type="text" id="source-name" placeholder="Shape name">
         
+        <label style="margin-top: 12px; display: block;">Zone Color</label>
+        <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 12px;">
+          <input type="color" id="zone-color" value="#667eea" style="width: 60px; height: 40px; border: 2px solid #444; border-radius: 6px; cursor: pointer; padding: 0;">
+          <span style="font-size: 12px; color: #999;">Click to change color</span>
+        </div>
+        
         <label style="margin-top: 12px; display: block;">Audio Source</label>
         <select id="audio-source-type" style="width: 100%; padding: 10px; background: #2a2a2a; border: 1px solid #444; border-radius: 6px; color: #e0e0e0; font-size: 13px; margin-bottom: 8px;">
           <option value="upload">Upload File</option>
