Set up spatial mixer for GitHub/Netlify deployment - Create main index.html entry point for spatial-mixer - Update root netlify.toml with spatial-mixer redirects - Update main index.html to show Spatial Mixer as LIVE - Spatial mixer accessible at /spatial-mixer/

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
         ??? Soundmap Player
         <span class="status">LIVE</span>
       </a>
-      <a href="/spatial-mixer/" style="opacity: 0.5; pointer-events: none;">
+      <a href="/spatial-mixer/">
         ??? Spatial Mixer
-        <span class="status" style="background: #94a3b8;">Coming Soon</span>
+        <span class="status">LIVE</span>
       </a>
     </div>
   </div>
