Fix config.json path in spatial-mixer index.html

--- a/spatial-mixer/index.html
+++ b/spatial-mixer/index.html
@@ -727,7 +727,7 @@
             // If no config parameter, try to load default config.json from same directory
             if (!configUrl) {
                 const baseUrl = getBaseUrl();
-                configUrl = baseUrl + 'config.json';
+                configUrl = baseUrl + 'interactive-audio-hover/config.json';
                 console.log('📝 No config parameter, using default:', configUrl);
             }
             
