Set builder.html as main spatial mixer entry point - Copy builder.html to spatial-mixer/index.html - Update script paths for correct relative paths - Add separate Spatial Mixer Player link to main index - Builder is now the primary tool, player is separate

--- a/index.html
+++ b/index.html
@@ -75,7 +75,11 @@
         <span class="status">LIVE</span>
       </a>
       <a href="/spatial-mixer/">
-        ??? Spatial Mixer
+        ??? Spatial Mixer Builder
+        <span class="status">LIVE</span>
+      </a>
+      <a href="/spatial-mixer/interactive-audio-hover/player.html">
+        ??? Spatial Mixer Player
         <span class="status">LIVE</span>
       </a>
     </div>
