Fix player.html script path - Use relative path since player.html is in same directory as JS file

--- a/spatial-mixer/interactive-audio-hover/player.html
+++ b/spatial-mixer/interactive-audio-hover/player.html
@@ -568,7 +568,7 @@
             }
         }
     </script>
-    <script src="interactive-audio-hover/interactive-audio-hover.js"></script>
+    <script src="interactive-audio-hover.js"></script>
     <script>
         let loadedConfig = null;
         let audioFilesForImport = [];
