Remove all updateTracksList references and ensure audio plays - Remove remaining updateTracksList() calls - Add playAll() calls after config loads - Check isPlaying before calling playAll()

--- a/spatial-mixer/interactive-audio-hover/player.html
+++ b/spatial-mixer/interactive-audio-hover/player.html
@@ -554,7 +554,14 @@
                     // Initialize volume controls after sources are loaded
                     if (window.audioHover && window.audioHover.sources.length > 0) {
                         initializeVolumeControls();
-                        updateTracksList();
+                        
+                        // Start playback
+                        setTimeout(() => {
+                            if (window.audioHover && !window.audioHover.isPlaying) {
+                                window.audioHover.playAll();
+                                console.log('✓ Playback started');
+                            }
+                        }, 500);
                     }
                     
                     // Attempt auto-play
