Add URL shortener tip for Wix embeds - Mention URL shorteners as solution for long data URLs - Add helpful tips in embed modal

--- a/spatial-mixer/index.html
+++ b/spatial-mixer/index.html
@@ -607,7 +607,8 @@
                             1. Copy the embed code below<br>
                             2. In Wix Studio, add an "HTML iframe" element<br>
                             3. Paste the embed code<br>
-                            4. Adjust size as needed (recommended: 100% width, 600px height)
+                            4. Adjust size as needed (recommended: 100% width, 600px height)<br><br>
+                            <strong>💡 Tip:</strong> If the URL is too long, you can use a URL shortener (bit.ly, tinyurl.com, etc.) on the full URL!
                         </p>
                     </div>
                     <div style="margin-bottom: 15px;">
