Integrate AV Sync Mixer into GitHub hosted version
- Add links to AV Sync Mixer Builder and Player on landing page
- Add redirect rule for /av-sync-player in netlify.toml
- Tool now accessible from main toolkit landing page

--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
         ??? Soundmap Player
         <span class="status">LIVE</span>
       </a>
+      <a href="/av-sync-player/">
+        ??? AV Sync Mixer Builder
+        <span class="status">LIVE</span>
+      </a>
+      <a href="/av-sync-player/player.html">
+        ??? AV Sync Mixer Player
+        <span class="status">LIVE</span>
+      </a>
       <a href="/spatial-mixer/">
         ??? Spatial Mixer Builder
         <span class="status">LIVE</span>
